<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nama_siswa"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_nis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nis"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_pengajuan_prakerin_siswa"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <Spinner
            android:id="@+id/sp_kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/kelas"
            android:visibility="visible" />

        <EditText
        android:id="@+id/et_alamat"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_telp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/no_telp"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

        <TextView
            android:id="@+id/tvTipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipe_perusahaan"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <Spinner
            android:id="@+id/sp_tipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type"
            android:visibility="visible" />

    <EditText
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/p1"
        android:inputType="text" />

    <EditText
        android:id="@+id/p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/p2"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

        <Button
            android:id="@+id/buttonPerusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_perusahaan" />

</LinearLayout>

